--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'HV'
 - !lcsh 'Crime -- Great Britain'
 - !lcsh 'Criminals -- Great Britain -- Biography'
+- GITenberg
 title: Lives of the Most Remarkable Criminals Who have been Condemned and Executed
   for Murder, the Highway, Housebreaking, Street Robberies, Coining or other offences
 url: http://www.gutenberg.org/ebooks/13097
